# docs/swagger.json
@@ -34,7 +34,7 @@
                 }
             }
         },
-        "/payments/{orderid}": {
+        "/payments/{order-id}": {
             "get": {
                 "description": "Get a payment",
                 "consumes": [
@@ -49,7 +49,7 @@
                 "summary": "Get Payment by OrderID",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "order ID",
                         "name": "id",
                         "in": "path",
